--- a/params.yaml
+++ b/params.yaml
@@ -5,31 +5,12 @@ MODEL_STRUCTURE: resnet18
 # ? Hyperparameters
 EPOCHS: 30
 BATCH_SIZE: 16
+IMG_SIZE : 224
 # Current optimzer support: sgd, adam, adamw, rmsprop
 OPTIMIZER: 'adam' 
 LEARNING_RATE: 0.001
-IMG_SIZE : 160
 # Current scheduler support: None, 'constant', 'exponential'
 SCHEDULER: constant
-# Current scheduler support: None, 'horizontal_flip', 'affine'
-DATA_AUG: horizontal_flip
+# Current criterion support: mse, cross-entropy
 CRITERION: mse
-# ? Data stuff (no need to change)
-ROOT_DIR : 'data'
-classes : [
-    "Australian terrier", 
-    "Border terrier",
-    "Samoyed", 
-    "Beagle", 
-    "Shih-Tzu", 
-    "English foxhound", 
-    "Rhodesian ridgeback", 
-    "Dingo", 
-    "Golden retriever", 
-    "Old English sheepdog"
-]
 
-
-# ? Assignments constraints
-MAX_PARAMS: 3_000_000
-MAX_EPOCHS: 50
