normalized coordinates of dataset

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -5,6 +5,7 @@ stages:
     - data/
     - src/train.py
     - src/models.py
+    - src/dataset.py
     params:
     - MODEL_STRUCTURE
     - EPOCHS
