freezing experiment doen

--- a/params.yaml
+++ b/params.yaml
@@ -3,15 +3,16 @@
 MODEL_STRUCTURE: resnet18
 
 # ? Hyperparameters
-EPOCHS: 90
+EPOCHS: 30
 BATCH_SIZE: 32
 IMG_SIZE : 224
 # Current optimzer support: sgd, adam, adamw, rmsprop
 OPTIMIZER: 'adam' 
-LEARNING_RATE: 0.01
+LEARNING_RATE: 0.001
 # Current scheduler support: None, 'constant', 'exponential', 'step'
 SCHEDULER: step
 # Current criterion support: mse, cross-entropy
 CRITERION: mse
+FREEZE_LAYERS: True
 
 ROOT_DIR: data
